I'm so sorry sonar, but when testing extreme inputs that you say should be really really evil, that bad regex performs better than your alternative. Reverting part of the changes.